# atlantis

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  mkdocs.yml  pyproject.toml  tox.ini
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: README.md  bundle.yml  ci.yml  docs.yml
atlantis/: __init__.py  __main__.py  main.py
atlantis/assets/: __init__.py
atlantis/core/: app.py  logging.py  settings.py
atlantis/model/: diagram.py  file_handler.py  file_session.py  file_watch.py  recent_files.py  recovery.py
atlantis/plugins/: __init__.py  builtin.py  manifest.py  registry.py
atlantis/renderer/: __init__.py  logging_events.py  mermaid_assets.py  mermaid_renderer.py  webengine_bridge.py
atlantis/ui/: editor.py  front_matter_editor.py  main_window.py  preferences.py  preview.py  qt_accessors.py  status_bar.py
atlantis/utils/: debounce.py  frontmatter.py
docs/: contributing.md  getting-started.md  index.md  projectbrief.md
docs/adr/: 0001-mermaid-cdn-mvp.md  0002-pyqt6-pin-macos-12.md  0003-mermaid-offline-bundle.md  0004-native-bundle-pyinstaller.md
docs/reference/: api.md  architecture.md
docs/user-guide/: editor.md  examples.md  front-matter.md  installation.md  plugins.md  renderer.md  troubleshooting.md
memory-bank/: activeContext.md  productContext.md  progress.md  style-guide.md  systemPatterns.md  tasks.md  techContext.md
memory-bank/archive/: archive-build-phase1-2-2026-05-06.md  archive-build-phase3-2026-05-11.md  archive-build-phase4-2026-05-11.md  archive-build-phase5-2026-05-11.md  (+10 more)
scripts/: fetch_mermaid_vendor.py  tech_validation_mermaid_webengine.py
tests/: conftest.py  test_ci_docs_hygiene.py  test_document_file_watcher.py  test_file_session.py  test_front_matter_editor.py  test_frontmatter_serialize.py  test_logging_config.py  test_main_cli.py  test_main_window_front_matter.py  test_makefile_targets.py  test_mermaid_assets.py  test_mypy_gate.py  test_packaging_hygiene.py  test_phase1_smoke.py  test_phase2_window.py  test_phase3_persistence.py  test_phase4_frontmatter.py  test_phase4_window_polish.py  test_plugin_registry.py  test_recent_files_registry.py  test_renderer_logging.py  test_webengine_bridge_smoke.py  test_webengine_bridge_unit.py
(+21 files in other folders)
